force-app/main/default/objects/CLE_Attendance__c/CLE_Attendance__c.object-meta.xml
<CustomObject>
    <label>CLE Attendance</label>
    <nameField>
        <displayFormat>CLE-{00000}</displayFormat>
        <label>CLE Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLE Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>