force-app/main/default/objects/CLE_Attendance__c/fields/Attorney_Attended__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Attended__c</fullName>
    <formula>IF( CLE_Event__r.General_Credit__c ==  General_Credit__c , &quot;Entire Course Attendance&quot;, &quot;Partial Course Attendance (only actual attendance or participation earns credits)&quot;)</formula>
    <label>Attorney Attended</label>
    <type>Text</type>
</CustomField>