force-app/main/default/objects/CLE_Attendance__c/fields/Certificate_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Send_Date__c</fullName>
    <label>Certificate Send Date</label>
    <type>Date</type>
</CustomField>