force-app/main/default/objects/CLE_Attendance__c/fields/CLE_Event__c.field-meta.xml
<CustomField>
    <fullName>CLE_Event__c</fullName>
    <label>CLE Event</label>
    <referenceTo>CLE_Event__c</referenceTo>
    <relationshipLabel>CLE Attendances</relationshipLabel>
    <relationshipName>CLE_Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>