force-app/main/default/objects/CLE_Attendance__c/fields/CLE_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>CLE_Event_Date__c</fullName>
    <label>CLE Event Date</label>
    <type>Date</type>
</CustomField>