force-app/main/default/objects/CLE_Attendance__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CLE Attendances</relationshipLabel>
    <relationshipName>CLE_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>