force-app/main/default/objects/CLE_Attendance__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <formula>CLE_Event__r.Date__c</formula>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>