force-app/main/default/objects/CLE_Attendance__c/fields/Event_Date_group__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_group__c</fullName>
    <formula>Event_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date (group)</label>
    <type>Date</type>
</CustomField>