force-app/main/default/objects/CLE_Attendance__c/fields/Event_Hours__c.field-meta.xml
<CustomField>
    <fullName>Event_Hours__c</fullName>
    <formula>CLE_Event__r.Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>