force-app/main/default/objects/CLE_Attendance__c/fields/General_Credit__c.field-meta.xml
<CustomField>
    <fullName>General_Credit__c</fullName>
    <description>CLE General Credit</description>
    <inlineHelpText>CLE General Credit</inlineHelpText>
    <label>General Credit</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>