force-app/main/default/objects/CLE_Attendance__c/fields/Lawyer_Participation_Method__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Participation_Method__c</fullName>
    <label>Lawyer Participation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LVA</fullName>
                <label>Live - Technology</label>
            </value>
            <value>
                <fullName>FIRWP</fullName>
                <label>Faculty in room with participants</label>
            </value>
            <value>
                <fullName>RVA</fullName>
                <label>Recorded - Technology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>