force-app/main/default/objects/CLE_Attendance__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CLE Attendances</relationshipLabel>
    <relationshipName>CLE_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>