force-app/main/default/objects/CLE_Attendance__c/fields/Policy_Applied_To__c.field-meta.xml
<CustomField>
    <fullName>Policy_Applied_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Applied To</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>CLE Attendances</relationshipLabel>
    <relationshipName>CLE_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>