force-app/main/default/objects/CLE_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lawyer_Participation_Method__c</columns>
    <columns>CLE_Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>