force-app/main/default/objects/CLE_Attendance__c/listViews/Email_Test.listView-meta.xml
<ListView>
    <fullName>Email_Test</fullName>
    <columns>NAME</columns>
    <columns>Lawyer_Participation_Method__c</columns>
    <columns>CLE_Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLE_Event__c</field>
        <operation>contains</operation>
        <value>01/29/2025</value>
    </filters>
    <filters>
        <field>Lawyer_Participation_Method__c</field>
        <operation>equals</operation>
    </filters>
    <label>Email Test</label>
</ListView>